objects/SiteProduct__c/SiteProduct__c.object-meta.xml
<CustomObject>
    <label>Site-Product</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site-Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>