objects/SiteProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Corresponds to the product name</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Site-Products</relationshipLabel>
    <relationshipName>Site_Products</relationshipName>
    <type>Lookup</type>
</CustomField>