objects/SiteProduct__c/fields/REMSID__c.field-meta.xml
<CustomField>
    <fullName>REMSID__c</fullName>
    <externalId>true</externalId>
    <label>REMS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>