objects/SiteProduct__c/fields/SpecialtyDistributor__c.field-meta.xml
<CustomField>
    <fullName>SpecialtyDistributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field lookup to the SD account to be associated with the product</description>
    <label>Specialty Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SpecialtyDistributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specialty Distributor</relationshipLabel>
    <relationshipName>Site_Products</relationshipName>
    <type>Lookup</type>
</CustomField>